--- a/style.css
+++ b/style.css
@@ -116,6 +116,9 @@
     font-style: normal;
     font-size: medium;
 }
+.logout:hover{
+    background-color: #0073e6;
+}
 .sharebutton{
     margin-left: 10px;
     padding: 4px 5px;
@@ -278,6 +281,7 @@
     font-style: normal;
     font-size: medium;
     border-radius: 0 0 25px 25px;
+    cursor: pointer;
 }
 
 .sort {
@@ -288,7 +292,7 @@
     font-weight: 550;
     font-style: normal;
     font-size: medium;
-    cursor: auto;
+    cursor: pointer;
     margin-right: 15px;
 
 }
