--- a/style.css
+++ b/style.css
@@ -25,9 +25,7 @@
     z-index: 20;
 }
 
-
 .navbar-left,
-.navbar-center,
 .navbar-right {
     display: flex;
     align-items: center;
@@ -65,20 +63,7 @@
     border-bottom: 3px solid black;
 }
 
-.navbar-center {
-    flex: 1;
-    justify-content: center;
-}
-
-.navbar-center input[type="text"] {
-    width: 300px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
 .search-by-image {
-
     margin-left: 10px;
     padding: 8px 16px;
     border: 1px solid #ccc;
@@ -116,21 +101,11 @@
     font-style: normal;
     font-size: medium;
 }
+
 .logout:hover{
     background-color: #0073e6;
 }
-.sharebutton{
-    margin-left: 10px;
-    padding: 4px 5px;
-    border: 2px solid black;
-    border-radius: 100px;
-    background-color: white;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 550;
-    font-style: normal;
-    font-size: medium;
-}
+
 .signup {
     background-color: #0073e6;
     color: white;
@@ -144,6 +119,7 @@
     margin-left: 20px;
     font-weight: bold;
 }
+
 .pro-button {
     display: inline-block;
     padding: 3px 4px;
@@ -154,7 +130,6 @@
     border-radius: 5px;
     text-align: center;
 }
-
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -177,12 +152,6 @@
 
 .dropdown-content a:hover {
     background-color: #f1f1f1;
-}
-
-.dropdown-content hr {
-    margin: 0;
-    border: 0;
-    border-top: 1px solid #000000;
 }
 
 .line{
@@ -297,13 +266,13 @@
 
 }
 
-
 .sort select {
     padding: 8px 12px;
     border: 1px solid #ccc;
     border-radius: 25px;
     background-color: #f5f5f5;
 }
+
 .search-value::placeholder{
     padding-left: 10px;
     font-family: "Poppins", sans-serif;
@@ -312,12 +281,14 @@
     font-size: medium;
     color: #000000;
 }
+
 .thumbnail-header{
     display:grid;
     grid-template-columns: repeat(4,minmax(0,1fr));
     position: relative;
     transform: translate(0,75px);
 }
+
 .thumbnail {
     width: 350px;
     height: 300px;
@@ -329,6 +300,7 @@
     transition: transform 0.3s;
     margin-top: 15px;
 }
+
 .thumbnail-img{
     width: 350px;
     height: 230px;
@@ -389,6 +361,8 @@
 .stats i {
     margin-right: 5px;
 }
+
+/* Popup Modal */
 .popup-image{
     position: fixed;
     top: 0; left: 0;
@@ -398,7 +372,6 @@
     z-index: 30;
 }
 
-/* Popup Modal */
 .popup-modal {
     display: none;
     position: fixed;
@@ -420,19 +393,19 @@
 
 .close-btn {
     position: absolute;
-    width: 40px; /* Adjust size as needed */
-    height: 40px; /* Adjust size as needed */
+    width: 40px; 
+    height: 40px; 
     border-radius: 50%;
-    background-color: rgb(96, 92, 92); /* Semi-transparent black */
+    background-color: rgb(96, 92, 92); 
     color: white;
     border: none;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-size: 24px; /* Adjust size as needed */
-    position: absolute; /* Positioning for overlay */
-    top: 10px; /* Adjust position as needed */
+    font-size: 24px; 
+    position: absolute; 
+    top: 10px; 
     right: 10px;
     transition: 0.3s;
 }
