--- a/style.css
+++ b/style.css
@@ -115,6 +115,17 @@
     background-color: #005bb5;
 }
 
+.sharebutton{
+    border-radius: 25px;
+    padding: 5px 20px;
+    font-size: medium;
+    font-family: "Poppins", sans-serif;
+    font-weight: 550;
+    font-style: normal;
+    font-size: medium;
+    background-color: white;
+}
+
 .adobe-logo {
     margin-left: 20px;
     font-weight: bold;
